RESOLVED FIXED48414
Warning when compiling the chromium port of DumpRenderShell with clang
https://bugs.webkit.org/show_bug.cgi?id=48414
Summary Warning when compiling the chromium port of DumpRenderShell with clang
Søren Gjesse
Reported 2010-10-27 04:49:44 PDT
Created attachment 72010 [details] Simple patch Method javaScriptFlagsForLoad in TestShell.h compares a size_t argument >= 0 which causes a warning in clang
Attachments
Simple patch (1.55 KB, patch)
2010-10-27 04:49 PDT, Søren Gjesse
no flags
Patch (1.63 KB, patch)
2010-10-29 02:38 PDT, Søren Gjesse
no flags
Hans Wennborg
Comment 1 2010-10-27 07:08:23 PDT
Looks good to me, but I am not a reviewer.
Hans Wennborg
Comment 2 2010-10-27 07:11:15 PDT
Looking closer, shouldn't the ChangeLog contain a link to this bug entry? I thought the tools put that in automatically...
Søren Gjesse
Comment 3 2010-10-29 02:38:08 PDT
Andreas Kling
Comment 4 2010-10-29 06:35:00 PDT
Comment on attachment 72304 [details] Patch r=me
WebKit Commit Bot
Comment 5 2010-11-01 08:49:44 PDT
The commit-queue encountered the following flaky tests while processing attachment 72304 [details]: http/tests/cache/subresource-expiration.html Please file bugs against the tests. These tests were authored by koivisto@iki.fi. The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 6 2010-11-01 08:50:29 PDT
Comment on attachment 72304 [details] Patch Clearing flags on attachment: 72304 Committed r71030: <http://trac.webkit.org/changeset/71030>
WebKit Commit Bot
Comment 7 2010-11-01 08:50:34 PDT
All reviewed patches have been landed. Closing bug.
Cosmin Truta
Comment 8 2010-11-02 14:38:57 PDT
*** Bug 48851 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.