2010-11-01  Søren Gjesse  <sgjesse@chromium.org>

Reviewed by Andreas Kling.

        Fix warning when compiling the chromium port of DumpRenderShell
        with clang.
        https://bugs.webkit.org/show_bug.cgi?id=48414

        * DumpRenderTree/chromium/TestShell.h:
        (TestShell::javaScriptFlagsForLoad):

Canonical link: https://commits.webkit.org/61528@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71030 268f45cc-cd09-0410-ab3c-d52691b4dbfc